<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#eee" >
        
         <LinearLayout
        	android:id="@+id/text_size"
        	android:layout_margin="10dp"
        	android:padding="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="#fff" >
	
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	         >
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:padding="5dp"
	            android:textColor="#000"
	            android:text="@string/set_font_size"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:padding="5dp"
	            android:textColor="#000"
	            android:text="25"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:padding="10dp"
	            android:textColor="#000"
	            android:text="@string/set_card_preview" />
	
	        <SeekBar
	            android:id="@+id/seekBar1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:max="75"	            
	            android:progress="25" />        
	
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/set_theme"
        	android:layout_margin="10dp"
        	android:padding="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:background="#fff" >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:padding="5dp"
	            android:textColor="#000"
	            android:text="@string/set_settheme"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    </LinearLayout>
	</LinearLayout>
</ScrollView>